--- a/Site_Honkai/caminhos/caca.html
+++ b/Site_Honkai/caminhos/caca.html
@@ -1,40 +1,120 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>A Caça</title>
-<link rel="stylesheet" type="text/css" href="caminhos.css">
+  <title>A Caça</title>
+  <style>
+    body {
+      background-color: #f2f2f2;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 110vh;
+      text-align: center;
+    }
+
+    .description {
+      max-width: 600px;
+      margin-bottom: 10px;
+      padding: 15px;
+      border: solid #c09c7b;
+      border-width: 4px 6px 4px 9px;
+      background: #c09c7b1a;
+      border-radius: 0px 5px 0px 0px;
+    }
+
+    img {
+      max-width: 160%;
+      margin: 0 auto;
+      display: block;
+    }
+    .foto{
+      display: flex;
+      justify-content: center;
+    }
+    #path-image {
+      display: block;
+      margin: 0 auto;
+      margin-left: 145px; 
+    }
+  </style>
 </head>
 <body>
-<header>
+  <div class="container">
     <h1>A Caça</h1>
-</li>
-<section>
-    <h2>Sobre este caminho:</h2>
-    <p>
-    </p>
-    <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Aqueles que seguem o Caminho da "Caça" admiram determinação, crueldade e comportamento tenaz.
-    </font></font></i></div></div>
-    <table class="article-table sortable jquery-tablesorter" style="width:100%">
-        <thead><tr>
-        </th></tr></thead><tbody>
-        <tr>
-        <td><span style="white-space:nowrap;"><img alt="Path The Preservation" src="/Site_Honkai/Art_splash/Path_The_Hunt.webp" class=" lazyloaded"></span>
-        </td>
-    </td></tr></tbody><tfoot></tfoot></table>
-</section>
-<section>
-    <h2>Descrição:</h2>
-        <section>
-            <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 1px 1px 1px 5px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 8px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">"Sem fim para o ódio e sem limites para a guerra, quanta preocupação você carrega? Com ​​olhos determinados e a flecha apontada, o Reignbow Arbiter não precisa voltar para cá." </font></font><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">— Worlds History as a Mirror, Xianzhou </font></font><br><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">O Aeon conhecido como Reignbow Arbiter vagueia sem parar entre os mundos para destruir os seres mortos-vivos que uma vez envenenaram seu mundo natal. </font></font><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">O custo da caçada nunca foi levado em consideração por Lan. </font><font style="vertical-align: inherit;">Muitas vezes não há diferença entre a salvação que eles oferecem e a destruição total.</font></font></i></div><hr style="width: 97.5%; margin: auto"><div style="text-align: right; overflow: auto; max-height: 300px; padding: 5px 15px;"><i></font></font></a></i></div></div>
-        </section>
-        <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">A Caça é um dos sete Caminho.Este caminho corresponde ao Aeon Lan .</font></font></i></div></div>
-        <table class="article-table sortable jquery-tablesorter" style="width:100%">
-            <h2><span class="mw-headline" id="Other_Languages">Outras linguas</span></h2>
-            <table class="article-table"><tbody><tr><th>Language</th><th>Official Name</th></tr><tr><td><b>English</b></td><td>The Hunt</td></tr><tr><td style="line-height:1em"><b>Chinese<br><small>(Simplified)</small></b></td><td><span lang="zh-Hans">巡猎</span></td></tr><tr><td style="line-height:1em"><b>Chinese<br><small>(Traditional)</small></b></td><td><span lang="zh-Hant">巡獵</span></td></tr><tr><td><b>Japanese</b></td><td><span lang="ja">巡狩</span></td></tr><tr><td><b>Korean</b></td><td><span lang="ko">수렵</span></td></tr><tr><td><b>Spanish</b></td><td>Cacer<span lang="es">í</span>a</td></tr><tr><td><b>French</b></td><td>La Chasse</td></tr><tr><td><b>Russian</b></td><td><span lang="ru">Охота</span></td></tr><tr><td><b>Thai</b></td><td><span lang="th">ล่าสังหาร</span></td></tr><tr><td><b>Vietnamese</b></td><td><span lang="vi">Săn Bắn</span></td></tr><tr><td><b>German</b></td><td>Die Jagd</td></tr><tr><td><b>Indonesian</b></td><td>Hunt</td></tr><tr><td><b>Portuguese</b></td><td>A Ca<span lang="pt">ç</span>a</td></tr></tbody></table>
-            <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" ><a href="/Site_Honkai/site.html">Voltar</a></font></font></i></div></div>
-            <table class="article-table sortable jquery-tablesorter" style="width:100%">
-    </head>
-<body>
-    
+
+    <section>
+      <h2>Sobre este caminho:</h2>
+      <div class="description">
+        <i>Aqueles que seguem o Caminho da "Caça" admiram determinação, crueldade e comportamento tenaz.</i>
+      </div>
+
+      <table class="article-table sortable jquery-tablesorter">
+        <thead>
+          <tr>
+            <!-- Cabeçalho da tabela -->
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <span style="white-space:nowrap;">
+                <section id="Foto">
+                    <img id="path-image" alt="Path The Hunt" src="/Site_Honkai/Art_splash/Path_The_Hunt.webp" class="lazyloaded">
+            </section>
+              </span>
+            </td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <!-- Rodapé da tabela -->
+        </tfoot>
+      </table>
+    </section>
+
+    <section>
+      <h2>Descrição:</h2>
+      <section>
+        <div class="description">
+          <i>
+            "Sem fim para o ódio e sem limites para a guerra, quanta preocupação você carrega? Com ​​olhos determinados e a flecha apontada, o Reignbow Arbiter não precisa voltar para cá."
+          </i>
+          <br>
+          <i>— Worlds History as a Mirror, Xianzhou</i>
+          <br>
+          <br>
+          <i>
+            O Aeon conhecido como Reignbow Arbiter vagueia sem parar entre os mundos para destruir os seres mortos-vivos que uma vez envenenaram seu mundo natal.
+O custo da caçada nunca foi levado em consideração por Lan. Muitas vezes não há diferença entre a salvação que eles oferecem e a destruição total.
+          </i>
+        </div>
+        <hr style="width: 97.5%; margin: auto">
+        <div style="text-align: right; overflow: auto; max-height: 300px; padding: 5px 15px;">
+          <i>Aeons</i>
+        </div>
+      </section>
+
+      <div class="description">
+        <i>
+            A Caçada é um dos sete Caminhos corresponde ao Aeon Lan .
+        </i>
+      </div>
+
+      <table class="article-table sortable jquery-tablesorter">
+        <!-- Conteúdo da tabela -->
+      </table>
+    </section>
+
+    <div class="description">
+      <i><a href="/Site_Honkai/site.html">Voltar</a></i>
+    </div>
+
+    <table class="article-table sortable jquery-tablesorter">
+      <!-- Conteúdo da tabela -->
+    </table>
+  </div>
 </body>
 </html>
