--- a/Site_Honkai/caminhos/harmonia.html
+++ b/Site_Honkai/caminhos/harmonia.html
@@ -1,40 +1,121 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>A Harmonia</title>
-<link rel="stylesheet" type="text/css" href="caminhos.css">
+  <title>A Harmonia</title>
+  <style>
+    body {
+      background-color: #f2f2f2;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 110vh;
+      text-align: center;
+    }
+
+    .description {
+      max-width: 600px;
+      margin-bottom: 10px;
+      padding: 15px;
+      border: solid #c09c7b;
+      border-width: 4px 6px 4px 9px;
+      background: #c09c7b1a;
+      border-radius: 0px 5px 0px 0px;
+    }
+
+    img {
+      max-width: 160%;
+      margin: 0 auto;
+      display: block;
+    }
+    .foto{
+      display: flex;
+      justify-content: center;
+    }
+    #path-image {
+      display: block;
+      margin: 0 auto;
+      margin-left: 145px; 
+    }
+  </style>
 </head>
 <body>
-<header>
+  <div class="container">
     <h1>A Harmonia</h1>
-</li>
-<section>
-    <h2>Sobre este caminho:</h2>
-    <p>
-    </p>
-    <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Aqueles que seguem o Caminho da "Harmonia" admiram a compreensão, o apoio e o comportamento cooperativo.
-    </font></font></i></div></div>
-    <table class="article-table sortable jquery-tablesorter" style="width:100%">
-        <thead><tr>
-        </th></tr></thead><tbody>
-        <tr>
-        <td><span style="white-space:nowrap;"><img alt="Path The Preservation" src="/Site_Honkai/Art_splash/Path_The_Harmony.webp" class=" lazyloaded"></span>
-        </td>
-    </td></tr></tbody><tfoot></tfoot></table>
-</section>
-<section>
-    <h2>Descrição:</h2>
-        <section>
-            <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 1px 1px 1px 5px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 8px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">"O mundo está em harmonia e as estrelas brilham. Louvado seja o Senhor! Todos estão conectados e o vento da bênção sopra sobre as terras!" </font></font><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">— Odes of Harmony, I </font></font><br><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Um Aeon plural de múltiplos mundos harmoniosos. </font><font style="vertical-align: inherit;">O glorioso Xipe de mil faces está entoando canções de alegria e felicidade. </font></font><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Para combater a brutalidade das leis do universo, as formas de vida inteligentes devem descartar seu egoísmo covarde e as diferenças entre os indivíduos, fundindo-se em uma melodia singular - fazer com que os fortes ajudem os fracos e proteger a vida com a morte.</font></font></i></div><hr style="width: 97.5%; margin: auto"><div style="text-align: right; overflow: auto; max-height: 300px; padding: 5px 15px;"><i><a href="/wiki/Data_Bank" title="Banco de dados"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></a><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Aeons</font></font></i></div></div>
-        </section>
-        <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">A Harmonia é um dos sete Caminho.Este caminho corresponde ao Aeon Xipe .</font></font></i></div></div>
-<table class="article-table sortable jquery-tablesorter" style="width:100%">
-    <h2><span class="mw-headline" id="Other_Languages">Outras linguas</span></h2>
-    <table class="article-table"><tbody><tr><th>Language</th><th>Official Name</th></tr><tr><td><b>English</b></td><td>The Harmony</td></tr><tr><td style="line-height:1em"><b>Chinese<br><small>(Simplified)</small></b></td><td><span lang="zh-Hans">同谐</span></td></tr><tr><td style="line-height:1em"><b>Chinese<br><small>(Traditional)</small></b></td><td><span lang="zh-Hant">同諧</span></td></tr><tr><td><b>Japanese</b></td><td><span lang="ja">調和</span></td></tr><tr><td><b>Korean</b></td><td><span lang="ko">화합</span></td></tr><tr><td><b>Spanish</b></td><td>La Armon<span lang="es">í</span>a</td></tr><tr><td><b>French</b></td><td>L'Harmonie</td></tr><tr><td><b>Russian</b></td><td><span lang="ru">Гармония</span></td></tr><tr><td><b>Thai</b></td><td><span lang="th">ประสาน</span></td></tr><tr><td><b>Vietnamese</b></td><td><span lang="vi">Hòa Hợp</span></td></tr><tr><td><b>German</b></td><td>Die Harmonie</td></tr><tr><td><b>Indonesian</b></td><td>Harmony</td></tr><tr><td><b>Portuguese</b></td><td>A Harmonia</td></tr></tbody></table>
-    <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" ><a href="/Site_Honkai/site.html">Voltar</a></font></font></i></div></div>
-    <table class="article-table sortable jquery-tablesorter" style="width:100%">
-    </head>
-<body>
-    
+
+    <section>
+      <h2>Sobre este caminho:</h2>
+      <div class="description">
+        <i>Aqueles que seguem o Caminho da "Harmonia" admiram a compreensão, o apoio e o comportamento cooperativo.</i>
+      </div>
+
+      <table class="article-table sortable jquery-tablesorter">
+        <thead>
+          <tr>
+            <!-- Cabeçalho da tabela -->
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <span style="white-space:nowrap;">
+                <section id="Foto">
+                    <img id="path-image" alt="Path The Harmony" src="/Site_Honkai/Art_splash/Path_The_Harmony.webp" class="lazyloaded">
+            </section>
+              </span>
+            </td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <!-- Rodapé da tabela -->
+        </tfoot>
+      </table>
+    </section>
+
+    <section>
+      <h2>Descrição:</h2>
+      <section>
+        <div class="description">
+          <i>"O mundo está em harmonia e as estrelas brilham. Louvado seja o Senhor! Todos estão conectados e o vento da bênção sopra sobre as terras!"
+
+          </i>
+          <br>
+          <i>— Odes of Harmony , I</i>
+          <br>
+          <br>
+          <i>
+            Um Aeon plural de múltiplos mundos harmoniosos. O glorioso Xipe de mil faces está entoando canções de alegria e felicidade.
+Para combater a brutalidade das leis do universo, as formas de vida inteligentes devem descartar seu egoísmo covarde e as diferenças entre os indivíduos, fundindo-se em uma melodia singular - fazer com que os fortes ajudem os fracos e proteger a vida com a morte.
+          </i>
+        </div>
+        <hr style="width: 97.5%; margin: auto">
+        <div style="text-align: right; overflow: auto; max-height: 300px; padding: 5px 15px;">
+          <i>Aeons</i>
+        </div>
+      </section>
+
+      <div class="description">
+        <i>
+            A Harmonia é um dos sete Caminhos corresponde ao Aeon Xipe .
+        </i>
+      </div>
+
+      <table class="article-table sortable jquery-tablesorter">
+        <!-- Conteúdo da tabela -->
+      </table>
+    </section>
+
+
+    <div class="description">
+      <i><a href="/Site_Honkai/site.html">Voltar</a></i>
+    </div>
+
+    <table class="article-table sortable jquery-tablesorter">
+      <!-- Conteúdo da tabela -->
+    </table>
+  </div>
 </body>
 </html>
