--- a/Site_Honkai/caminhos/preservacao.html
+++ b/Site_Honkai/caminhos/preservacao.html
@@ -1,39 +1,122 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>A Preservação</title>
-<link rel="stylesheet" type="text/css" href="caminhos.css">
+  <title>A Preservação</title>
+  <style>
+    body {
+      background-color: #f2f2f2;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 110vh;
+      text-align: center;
+    }
+
+    .description {
+      max-width: 600px;
+      margin-bottom: 10px;
+      padding: 15px;
+      border: solid #c09c7b;
+      border-width: 4px 6px 4px 9px;
+      background: #c09c7b1a;
+      border-radius: 0px 5px 0px 0px;
+    }
+
+    img {
+      max-width: 160%;
+      margin: 0 auto;
+      display: block;
+    }
+    .foto{
+      display: flex;
+      justify-content: center;
+    }
+    #path-image {
+      display: block;
+      margin: 0 auto;
+      margin-left: 145px; 
+    }
+  </style>
 </head>
 <body>
-<header>
+  <div class="container">
     <h1>A Preservação</h1>
-</li>
-<section>
-    <h2>Sobre este caminho:</h2>
-    <p>
-    </p>
-    <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Aqueles que seguem o Caminho da "Preservação" admiram a paciência, o sacrifício e o comportamento defensivo.
-    </font></font></i></div></div>
-    <table class="article-table sortable jquery-tablesorter" style="width:100%">
-        <thead><tr>
-        </th></tr></thead><tbody>
-        <tr>
-        <td><span style="white-space:nowrap;"><img alt="Path The Preservation" src="/Site_Honkai/Art_splash/Path_The_Preservation.webp" class=" lazyloaded"></span>
-        </td>
-    </td></tr></tbody><tfoot></tfoot></table>
-</section>
-<section>
-    <h2>Descrição:</h2>
-        <section>
-        <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 1px 1px 1px 5px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 8px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">“O filósofo contempla as estrelas tentando encontrar o objetivo final da civilização – 'Construir um muro.' </font><font style="vertical-align: inherit;">Uma voz majestosa ecoou em sua cabeça. 'Construa uma parede.'" </font></font><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">— Fables About the Stars de Adrian Spencer Smith </font></font><br><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">O construtor da Celestial Comet Wall, da Subspace Crystalline Barrier e da Great Attractor Base. </font><font style="vertical-align: inherit;">Os seguidores os chamam de "Lorde Âmbar", um dos Aeons mais antigos e tenazes, tendo sobrevivido às "Guerras do Crepúsculo". </font></font><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Depois de descobrir que uma ameaça era iminente, o Amber Lord forjou um poderoso selo de anos-luz que isolaria e protegeria os mundos vivos.</font></font></i></div><hr style="width: 97.5%; margin: auto"><div style="text-align: right; overflow: auto; max-height: 300px; padding: 5px 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Aeons</font></font></i></div></div>
-        </section>
-        <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">A Preservação é um dos sete Caminho.Este caminho corresponde ao Aeon Qliphot.</font></font></i></div></div>
-        <h2><span class="mw-headline" id="Other_Languages">Outras linguas</span></h2>
-        <table class="article-table"><tbody><tr><th>Language</th><th>Official Name</th></tr><tr><td><b>English</b></td><td>The Preservation</td></tr><tr><td style="line-height:1em"><b>Chinese<br><small>(Simplified)</small></b></td><td><span lang="zh-Hans">存护</span></td></tr><tr><td style="line-height:1em"><b>Chinese<br><small>(Traditional)</small></b></td><td><span lang="zh-Hant">存護</span></td></tr><tr><td><b>Japanese</b></td><td><span lang="ja">存護</span></td></tr><tr><td><b>Korean</b></td><td><span lang="ko">보존</span></td></tr><tr><td><b>Spanish</b></td><td>Conservaci<span lang="es">ó</span>n</td></tr><tr><td><b>French</b></td><td>La Pr<span lang="fr">é</span>servation</td></tr><tr><td><b>Russian</b></td><td><span lang="ru">Сохранение</span></td></tr><tr><td><b>Thai</b></td><td><span lang="th">อนุรักษ์</span></td></tr><tr><td><b>Vietnamese</b></td><td><span lang="vi">Bảo Hộ</span></td></tr><tr><td><b>German</b></td><td>Die Bewahrung</td></tr><tr><td><b>Indonesian</b></td><td>Preservation</td></tr><tr><td><b>Portuguese</b></td><td>A Preserva<span lang="pt">çã</span>o</td></tr></tbody></table>
-            <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" ><a href="/Site_Honkai/site.html">Voltar</a></font></font></i></div></div>
-            <table class="article-table sortable jquery-tablesorter" style="width:100%">
-    </head>
-<body>
-    
+
+    <section>
+      <h2>Sobre este caminho:</h2>
+      <div class="description">
+        Aqueles que seguem o Caminho da "Preservação" admiram a paciência, o sacrifício e o comportamento defensivo.
+        <i></i>
+      </div>
+
+      <table class="article-table sortable jquery-tablesorter">
+        <thead>
+          <tr>
+            <!-- Cabeçalho da tabela -->
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <span style="white-space:nowrap;">
+                <section id="Foto">
+                    <img id="path-image" alt="Path The Preservation" src="/Site_Honkai/Art_splash/Path_The_Preservation.webp" class="lazyloaded">
+            </section>
+              </span>
+            </td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <!-- Rodapé da tabela -->
+        </tfoot>
+      </table>
+    </section>
+
+    <section>
+      <h2>Descrição:</h2>
+      <section>
+        <div class="description">
+          <i>“O filósofo contempla as estrelas tentando encontrar o objetivo final da civilização – 'Construir um muro.' Uma voz majestosa ecoou em sua cabeça. 'Construa uma parede.'"
+            — Fables About the Stars de Adrian Spencer Smith
+            
+            O construtor da Celestial Comet Wall , da Subspace Crystalline Barrier e da Great Attractor Base . Os seguidores os chamam de "Lorde Âmbar", um dos Aeons mais antigos e tenazes, tendo sobrevivido às "Guerras do Crepúsculo".
+          </i>
+          <br>
+          <i></i>
+          <br>
+          <br>
+          <i>
+            Depois de descobrir que uma ameaça era iminente, o Amber Lord forjou um poderoso selo de anos-luz que isolaria e protegeria os mundos vivos
+          </i>
+        </div>
+        <hr style="width: 97.5%; margin: auto">
+        <div style="text-align: right; overflow: auto; max-height: 300px; padding: 5px 15px;">
+          <i>Aeons</i>
+        </div>
+      </section>
+
+      <div class="description">
+        <i>
+            A Preservação é um dos sete Caminhos corresponde ao Aeon Qlipoth .
+        </i>
+      </div>
+
+      <table class="article-table sortable jquery-tablesorter">
+        <!-- Conteúdo da tabela -->
+      </table>
+    </section>
+
+    <div class="description">
+      <i><a href="/Site_Honkai/site.html">Voltar</a></i>
+    </div>
+
+    <table class="article-table sortable jquery-tablesorter">
+      <!-- Conteúdo da tabela -->
+    </table>
+  </div>
 </body>
 </html>
