--- a/Site_Honkai/personagens/trailblazer.html
+++ b/Site_Honkai/personagens/trailblazer.html
@@ -399,6 +399,9 @@
       </tbody>
     </table>
 </div>
+<h2><span class="mw-headline" id="Ascensions_and_Stats"><font style="vertical-align: inherit;">
+  <font style="vertical-align: inherit;">A Preservação</font></font></span></h2> 
+  <div>
     <div class="container">
         <div class="character-container">
         <div class="character-box">
