--- a/Site_Honkai/caminhos/abundancia.html
+++ b/Site_Honkai/caminhos/abundancia.html
@@ -1,40 +1,120 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>A Abundância</title>
-<link rel="stylesheet" type="text/css" href="caminhos.css">
+  <title>A Abundância</title>
+  <style>
+    body {
+      background-color: #f2f2f2;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 110vh;
+      text-align: center;
+    }
+
+    .description {
+      max-width: 600px;
+      margin-bottom: 10px;
+      padding: 15px;
+      border: solid #c09c7b;
+      border-width: 4px 6px 4px 9px;
+      background: #c09c7b1a;
+      border-radius: 0px 5px 0px 0px;
+    }
+
+    img {
+      max-width: 160%;
+      margin: 0 auto;
+      display: block;
+    }
+    .foto{
+      display: flex;
+      justify-content: center;
+    }
+    #path-image {
+      display: block;
+      margin: 0 auto;
+      margin-left: 145px; 
+    }
+  </style>
 </head>
 <body>
-<header>
+  <div class="container">
     <h1>A Abundância</h1>
-</li>
-<section>
-    <h2>Sobre este caminho:</h2>
-    <p>
-    </p>
-    <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Aqueles que seguem o Caminho da "Abundância" admiram o altruísmo, o altruísmo e o comportamento de cura.
-    </font></font></i></div></div>
-    <table class="article-table sortable jquery-tablesorter" style="width:100%">
-        <thead><tr>
-        </th></tr></thead><tbody>
-        <tr>
-        <td><span style="white-space:nowrap;"><img alt="Path The Preservation" src="/Site_Honkai/Art_splash/Path_The_Abundance.webp" class=" lazyloaded"></span>
-        </td>
-    </td></tr></tbody><tfoot></tfoot></table>
-</section>
-<section>
-    <h2>Descrição:</h2>
-        <section>
-<div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 1px 1px 1px 5px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 8px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">"As flores compartilham suas pétalas sem cuidado, esperando por seu inevitável destino murcho. Os pássaros voam alto cantando, movendo-se em direção ao seu inevitável choque e morte. Os riachos correm rapidamente com vida, em uma direção onde inevitavelmente secam. Por que todos devem coisas chegam ao fim? Deve haver um milagre em algum lugar do universo que pode curar a doença conhecida como finalidade." </font></font><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">— Life Is Too Short por Anonymous </font></font><br><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Peça com sentimento e você receberá. </font></font><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Yaoshi é o criador de vidas, o deus do paraíso eterno. </font><font style="vertical-align: inherit;">Seu desejo é garantir a existência perpétua da vida. </font></font><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Yaoshi é um Aeon que responde a todas as orações e não suporta ver a morte e as dores da doença.</font></font></i></div><hr style="width: 97.5%; margin: auto"><div style="text-align: right; overflow: auto; max-height: 300px; padding: 5px 15px;"><i><a href="/wiki/Data_Bank" title="Banco de dados"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"></font></font></a><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Aeons</font></font></i></div><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Os pássaros voam alto cantando, movendo-se em direção ao seu inevitável choque e morte. Os riachos correm rapidamente com vida, em uma direção onde inevitavelmente secam. todos devem chegar ao fim? Deve haver um milagre em algum lugar do universo que pode curar a doença conhecida como finalidade." </font></font></font></font><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">— Life Is Too Short por Anonymous </font></font></font></font><br><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Peça com sentimento e você receberá. </font></font></font></font><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Yaoshi é o criador de vidas, o deus do eterno. </font></font></font><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Seu desejo é garantir a existência perpétua da vida. </font></font></font></font><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Yaoshi é um Aeon que responde a todas as orações e não suporta ver a morte e as dores da doença.</font></font></font></font></i></div></div>
-        </section>
-        <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">A Abundância é um dos sete Caminho.Este caminho corresponde ao Aeon Yaoshi.</font></font></i></div></div>
-        <table class="article-table sortable jquery-tablesorter" style="width:100%">
-            <h2><span class="mw-headline" id="Other_Languages">Outras linguas</span></h2>
-            <table class="article-table"><tbody><tr><th>Language</th><th>Official Name</th></tr><tr><td><b>English</b></td><td>The Abundance</td></tr><tr><td style="line-height:1em"><b>Chinese<br><small>(Simplified)</small></b></td><td><span lang="zh-Hans">丰饶</span></td></tr><tr><td style="line-height:1em"><b>Chinese<br><small>(Traditional)</small></b></td><td><span lang="zh-Hant">豐饒</span></td></tr><tr><td><b>Japanese</b></td><td><span lang="ja">豊穣</span></td></tr><tr><td><b>Korean</b></td><td><span lang="ko">풍요</span></td></tr><tr><td><b>Spanish</b></td><td>Abundancia</td></tr><tr><td><b>French</b></td><td>L'Abondance</td></tr><tr><td><b>Russian</b></td><td><span lang="ru">Изобилие</span></td></tr><tr><td><b>Thai</b></td><td><span lang="th">เฟื่องฟู</span></td></tr><tr><td><b>Vietnamese</b></td><td><span lang="vi">Trù Phú</span></td></tr><tr><td><b>German</b></td><td>Der <span lang="de">Ü</span>berfluss</td></tr><tr><td><b>Indonesian</b></td><td>Abundance</td></tr><tr><td><b>Portuguese</b></td><td>A Abund<span lang="pt">â</span>ncia</td></tr></tbody></table>
-            <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" ><a href="/Site_Honkai/site.html">Voltar</a></font></font></i></div></div>
-            <table class="article-table sortable jquery-tablesorter" style="width:100%">
-    </head>
-<body>
-    
+
+    <section>
+      <h2>Sobre este caminho:</h2>
+      <div class="description">
+        <i>Aqueles que seguem o Caminho da "Abundância" admiram o altruísmo, o altruísmo e o comportamento de cura.</i>
+      </div>
+
+      <table class="article-table sortable jquery-tablesorter">
+        <thead>
+          <tr>
+            <!-- Cabeçalho da tabela -->
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <span style="white-space:nowrap;">
+                <section id="Foto">
+                    <img id="path-image" alt="Path The Abundance" src="/Site_Honkai/Art_splash/Path_The_Abundance.webp" class="lazyloaded">
+            </section>
+              </span>
+            </td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <!-- Rodapé da tabela -->
+        </tfoot>
+      </table>
+    </section>
+
+    <section>
+      <h2>Descrição:</h2>
+      <section>
+        <div class="description">
+          <i>
+            "As flores compartilham suas pétalas sem cuidado, esperando por seu inevitável destino murcho. Os pássaros voam alto cantando, movendo-se em direção ao seu inevitável choque e morte. Os riachos correm rapidamente com vida, em uma direção onde inevitavelmente secam. Por que todos devem coisas chegam ao fim? Deve haver um milagre em algum lugar do universo que pode curar a doença conhecida como finalidade."
+          </i>
+          <br>
+          <i>— Life Is Too Short por Anonymous</i>
+          <br>
+          <br>
+          <i>
+            Peça com sentimento e você receberá.
+Yaoshi é o criador de vidas, o deus do paraíso eterno. Seu desejo é garantir a existência perpétua da vida.
+Yaoshi é um Aeon que responde a todas as orações e não suporta ver a morte e as dores da doença.
+          </i>
+        </div>
+        <hr style="width: 97.5%; margin: auto">
+        <div style="text-align: right; overflow: auto; max-height: 300px; padding: 5px 15px;">
+          <i>Aeons</i>
+        </div>
+      </section>
+
+      <div class="description">
+        <i>A Abundância é um dos sete Caminhos. corresponde ao Aeon Yaoshi </i>
+      </div>
+
+      <table class="article-table sortable jquery-tablesorter">
+        <!-- Conteúdo da tabela -->
+      </table>
+    </section>
+
+
+    <div class="description">
+      <i><a href="/Site_Honkai/site.html">Voltar</a></i>
+    </div>
+
+    <table class="article-table sortable jquery-tablesorter">
+      <!-- Conteúdo da tabela -->
+    </table>
+  </div>
 </body>
 </html>
