--- a/Site_Honkai/caminhos/destruicao.html
+++ b/Site_Honkai/caminhos/destruicao.html
@@ -1,39 +1,120 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>A Destruição</title>
-<link rel="stylesheet" type="text/css" href="caminhos.css">
+  <title>A Destruição</title>
+  <style>
+    body {
+      background-color: #f2f2f2;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 110vh;
+      text-align: center;
+    }
+
+    .description {
+      max-width: 600px;
+      margin-bottom: 10px;
+      padding: 15px;
+      border: solid #c09c7b;
+      border-width: 4px 6px 4px 9px;
+      background: #c09c7b1a;
+      border-radius: 0px 5px 0px 0px;
+    }
+
+    img {
+      max-width: 160%;
+      margin: 0 auto;
+      display: block;
+    }
+    .foto{
+      display: flex;
+      justify-content: center;
+    }
+    #path-image {
+      display: block;
+      margin: 0 auto;
+      margin-left: 145px; 
+    }
+  </style>
 </head>
 <body>
-<header>
+  <div class="container">
     <h1>A Destruição</h1>
-</li>
-</header>
-<main>
+
     <section>
-    <h2>Sobre este caminho:</h2>
-    <p>
-    </p>
-    <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Aqueles que seguem o Caminho da "Destruição" admiram a imprudência, a raiva e o comportamento destrutivo.</font></font></i></div></div>
-    <table class="article-table sortable jquery-tablesorter" style="width:100%">
-        <thead><tr>
-        </th></tr></thead><tbody>
-        <tr>
-        <td><span style="white-space:nowrap;"><img alt="Path The Destruction" src="/Site_Honkai/Art_splash/Path_The_Destruction.webp" class=" lazyloaded"></span>
-        </td>
-    </td></tr></tbody><tfoot></tfoot></table>
-</section>
-<section>
-    <h2><span class="mw-headline" id="Description"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Descrição</font></font></span></h2>
-    <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 1px 1px 1px 5px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 8px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">"Sem fim para o ódio e sem limites para a guerra, quanta preocupação você carrega? Com ​​olhos determinados e a flecha apontada, o Reignbow Arbiter não precisa voltar para cá." </font></font><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">— Worlds History as a Mirror, Xianzhou </font></font><br><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">O Aeon conhecido como Reignbow Arbiter vagueia sem parar entre os mundos para destruir os seres mortos-vivos que uma vez envenenaram seu mundo natal. </font></font><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">O custo da caçada nunca foi levado em consideração por Lan. </font><font style="vertical-align: inherit;">Muitas vezes não há diferença entre a salvação que eles oferecem e a destruição total.</font></font></i></div><hr style="width: 97.5%; margin: auto"><div style="text-align: right; overflow: auto; max-height: 300px; padding: 5px 15px;"></font></font></a><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Aeons</font></font></i></div></div>
-</section>
-<div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">A Destruição é um dos sete Caminhos.Este caminho Corresponde ao Aeon Nanook .</font></font></i></div></div>
-<table class="article-table sortable jquery-tablesorter" style="width:100%">
-    <h2><span class="mw-headline" id="Other_Languages">Outras linguas</span></h2>
-    <table class="article-table"><tbody><tr><th>Language</th><th>Official Name</th></tr><tr><td><b>English</b></td><td>The Destruction</td></tr><tr><td style="line-height:1em"><b>Chinese<br><small>(Simplified)</small></b></td><td><span lang="zh-Hans">毁灭</span></td></tr><tr><td style="line-height:1em"><b>Chinese<br><small>(Traditional)</small></b></td><td><span lang="zh-Hant">毀滅</span></td></tr><tr><td><b>Japanese</b></td><td><span lang="ja">壊滅</span></td></tr><tr><td><b>Korean</b></td><td><span lang="ko">파멸</span></td></tr><tr><td><b>Spanish</b></td><td>Destrucci<span lang="es">ó</span>n</td></tr><tr><td><b>French</b></td><td>La Destruction</td></tr><tr><td><b>Russian</b></td><td><span lang="ru">Разрушение</span></td></tr><tr><td><b>Thai</b></td><td><span lang="th">ทำลายล้าง</span></td></tr><tr><td><b>Vietnamese</b></td><td><span lang="vi">Hủy Diệt</span></td></tr><tr><td><b>German</b></td><td>Die Zerst<span lang="de">ö</span>rung</td></tr><tr><td><b>Indonesian</b></td><td>Destruction</td></tr><tr><td><b>Portuguese</b></td><td>A Destrui<span lang="pt">çã</span>o</td></tr></tbody></table>
-    <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" ><a href="/Site_Honkai/site.html">Voltar</a></font></font></i></div></div>
-    <table class="article-table sortable jquery-tablesorter" style="width:100%">
-</head>
-<body>
+      <h2>Sobre este caminho:</h2>
+      <div class="description">
+        Aqueles que seguem o Caminho da "Destruição" admiram a imprudência, a raiva e o comportamento destrutivo.
+        <i></i>
+      </div>
+
+      <table class="article-table sortable jquery-tablesorter">
+        <thead>
+          <tr>
+            <!-- Cabeçalho da tabela -->
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <span style="white-space:nowrap;">
+                <section id="Foto">
+                    <img id="path-image" alt="Path The Destruction" src="/Site_Honkai/Art_splash/Path_The_Destruction.webp" class="lazyloaded">
+            </section>
+              </span>
+            </td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <!-- Rodapé da tabela -->
+        </tfoot>
+      </table>
+    </section>
+
+    <section>
+      <h2>Descrição:</h2>
+      <section>
+        <div class="description">
+          <i>"Se o aumento da entropia é uma lei fundamental do universo, então a morte térmica seria o destino inevitável do mundo material. Então, por que nos preocupamos em lutar para sobreviver? Expansão, fusão e depois aniquilação. Se desejamos dar as boas-vindas ao novo, então devemos primeiro abraçar o fim."
+          </i>
+          <br>
+          <i>— De um cientista pouco antes de apertar o botão para detonação nuclear, 2152 AE</i>
+          <br>
+          <br>
+          <i>
+            O nascimento do universo é um erro. Se a civilização é um câncer emergindo silenciosamente das estrelas ilimitadas, então a guerra é a única linguagem comum conhecida por toda a vida inteligente. Para corrigir esse erro e limpar esse universo maculado, Nanook se tornou o avatar da entropia.
+          </i>
+        </div>
+        <hr style="width: 97.5%; margin: auto">
+        <div style="text-align: right; overflow: auto; max-height: 300px; padding: 5px 15px;">
+          <i>Aeons</i>
+        </div>
+      </section>
+
+      <div class="description">
+        <i>
+            A Destruição é um dos sete Caminhos corresponde ao Aeon Nanook .
+        </i>
+      </div>
+
+      <table class="article-table sortable jquery-tablesorter">
+        <!-- Conteúdo da tabela -->
+      </table>
+    </section>
+
+
+    <div class="description">
+      <i><a href="/Site_Honkai/site.html">Voltar</a></i>
+    </div>
+
+    <table class="article-table sortable jquery-tablesorter">
+      <!-- Conteúdo da tabela -->
+    </table>
+  </div>
 </body>
 </html>
