--- a/Site_Honkai/caminhos/inexistencia.html
+++ b/Site_Honkai/caminhos/inexistencia.html
@@ -1,40 +1,126 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>A Inexistência</title>
-<link rel="stylesheet" type="text/css" href="caminhos.css">
+  <title>A Inexistência</title>
+  <style>
+    body {
+      background-color: #f2f2f2;
+    }
+
+    .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 110vh;
+      text-align: center;
+    }
+
+    .description {
+      max-width: 600px;
+      margin-bottom: 10px;
+      padding: 15px;
+      border: solid #c09c7b;
+      border-width: 4px 6px 4px 9px;
+      background: #c09c7b1a;
+      border-radius: 0px 5px 0px 0px;
+    }
+
+    img {
+      max-width: 160%;
+      margin: 0 auto;
+      display: block;
+    }
+    .foto{
+      display: flex;
+      justify-content: center;
+    }
+    #path-image {
+      display: block;
+      margin: 0 auto;
+      margin-left: 145px; 
+    }
+  </style>
 </head>
 <body>
-<header>
+  <div class="container">
     <h1>A Inexistência</h1>
-</li>
-<section>
-    <h2>Sobre este caminho:</h2>
-    <p>
-    </p>
-    <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Aqueles que seguem o Caminho da "Inexistência" admiram a preguiça, a exaustão e o comportamento sem sentido.
-    </font></font></i></div></div>
-    <table class="article-table sortable jquery-tablesorter" style="width:100%">
-        <thead><tr>
-        </th></tr></thead><tbody>
-        <tr>
-        <td><span style="white-space:nowrap;"><img alt="Path The Preservation" src="/Site_Honkai/Art_splash/Path_The_Nihility.webp" class=" lazyloaded"></span>
-        </td>
-    </td></tr></tbody><tfoot></tfoot></table>
-</section>
-<section>
-    <h2>Descrição:</h2>
-        <section>
-            <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 1px 1px 1px 5px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 8px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">"Você pode contemplar profundamente a vasta grandeza das estrelas, mas não olhe para o abismo do vazio... pois ele não contém nada exceto a habilidade de fazer os mortais perderem toda razão e pensamento." </font></font><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">— Murong, Doutor do Caos </font></font><br><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">A existência de Nihility é um mistério em si, sua forma envolta por camadas de névoa. </font></font><br><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">IX não interage com os outros Aeons. </font><font style="vertical-align: inherit;">Eles acreditam que o destino final do multiverso é o nada e, portanto, sem valor.</font></font></i></div><hr style="width: 97.5%; margin: auto"><div style="text-align: right; overflow: auto; max-height: 300px; padding: 5px 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Aeons</font></font></i></div></div>
-        </section>
-        <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">A Inexistência é um dos sete Caminho.Este caminho corresponde ao Aeon IX.</font></font></i></div></div>
-        <table class="article-table sortable jquery-tablesorter" style="width:100%">
-            <h2><span class="mw-headline" id="Other_Languages">Outras linguas</span></h2>
-            <table class="article-table"><tbody><tr><th>Language</th><th>Official Name</th></tr><tr><td><b>English</b></td><td>The Nihility</td></tr><tr><td style="line-height:1em"><b>Chinese<br><small>(Simplified)</small></b></td><td><span lang="zh-Hans">虚无</span></td></tr><tr><td style="line-height:1em"><b>Chinese<br><small>(Traditional)</small></b></td><td><span lang="zh-Hant">虛無</span></td></tr><tr><td><b>Japanese</b></td><td><span lang="ja">虚無</span></td></tr><tr><td><b>Korean</b></td><td><span lang="ko">공허</span></td></tr><tr><td><b>Spanish</b></td><td>Nihilidad</td></tr><tr><td><b>French</b></td><td>La Nihilit<span lang="fr">é</span></td></tr><tr><td><b>Russian</b></td><td><span lang="ru">Небытие</span></td></tr><tr><td><b>Thai</b></td><td><span lang="th">ลบล้าง</span></td></tr><tr><td><b>Vietnamese</b></td><td><span lang="vi">Hư Vô</span></td></tr><tr><td><b>German</b></td><td>Die Nichtigkeit</td></tr><tr><td><b>Indonesian</b></td><td>Nihility</td></tr><tr><td><b>Portuguese</b></td><td>A Inexist<span lang="pt">ê</span>ncia</td></tr></tbody></table>
-            <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #c09c7b1a; border-radius: 0px 5px 0px 0px; margin-bottom: 10px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;" ><a href="/Site_Honkai/site.html">Voltar</a></font></font></i></div></div>
-            <table class="article-table sortable jquery-tablesorter" style="width:100%">
-    </head>
-<body>
-    
+
+    <section>
+      <h2>Sobre este caminho:</h2>
+      <div class="description">
+        <i>Aqueles que seguem o Caminho da "Inexistência" admiram a preguiça, a exaustão e o comportamento sem sentido.</i>
+      </div>
+
+      <table class="article-table sortable jquery-tablesorter">
+        <thead>
+          <tr>
+            <!-- Cabeçalho da tabela -->
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <span style="white-space:nowrap;">
+                <section id="Foto">
+                    <img id="path-image" alt="Path The Preservation" src="/Site_Honkai/Art_splash/Path_The_Nihility.webp" class="lazyloaded">
+            </section>
+              </span>
+            </td>
+          </tr>
+        </tbody>
+        <tfoot>
+          <!-- Rodapé da tabela -->
+        </tfoot>
+      </table>
+    </section>
+
+    <section>
+      <h2>Descrição:</h2>
+      <section>
+        <div class="description">
+          <i>
+            "Você pode contemplar profundamente a vasta grandeza das estrelas, mas não olhe para o abismo do vazio... pois ele não contém nada exceto a habilidade de fazer os mortais perderem toda razão e pensamento."
+          </i>
+          <br>
+          <i>— Murong, Doutor do Caos</i>
+          <br>
+          <br>
+          <i>
+            A existência de Nihility é um mistério em si, sua forma envolta por camadas de névoa.
+            IX não interage com os outros Aeons.
+            Eles acreditam que o destino final do multiverso é o nada e, portanto, sem valor.
+          </i>
+        </div>
+        <hr style="width: 97.5%; margin: auto">
+        <div style="text-align: right; overflow: auto; max-height: 300px; padding: 5px 15px;">
+          <i>Aeons</i>
+        </div>
+      </section>
+
+      <div class="description">
+        <i>A Inexistência é um dos sete Caminhos. Este caminho corresponde ao Aeon IX.</i>
+      </div>
+
+      <table class="article-table sortable jquery-tablesorter">
+        <!-- Conteúdo da tabela -->
+      </table>
+    </section>
+
+    <section>
+      <h2>Outras línguas:</h2>
+      <table class="article-table">
+        <!-- Tabela de outras línguas -->
+      </table>
+    </section>
+
+    <div class="description">
+      <i><a href="/Site_Honkai/site.html">Voltar</a></i>
+    </div>
+
+    <table class="article-table sortable jquery-tablesorter">
+      <!-- Conteúdo da tabela -->
+    </table>
+  </div>
 </body>
 </html>
