--- a/Site_Honkai/Itens/Jade_Estelar.html
+++ b/Site_Honkai/Itens/Jade_Estelar.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html>
+    <title>Jade Estelar</title>
+    <link rel="stylesheet" type="text/css" href="itens.css">
 <head>
-<title>Jade Estelar</title>
-<link rel="stylesheet" type="text/css" href="itens.css">
 </head>
 <body>
-<header>
-    <div class="character-menu">
-        <img src="/Site_Honkai/Art_splash/Item_Stellar_Jade.webp" alt="Imagem do item">
-        <h2>Jade Estelar</h2>
-<section>
-    <div class="description standard-border" style="overflow: hidden; border: solid #c09c7b; border-width: 4px 6px 4px 9px; background: #c09c7b1a; border-radius: 50px 50px 50px 50px; margin-bottom: 10px;"><div style="text-align: left; overflow: auto; max-height: 300px; line-height: 1.35em; padding: 15px;"><i><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">"Alguns dizem que as luzes são desejos de seres sencientes. Embora insignificantes e indescritíveis, elas iluminaram o céu ao seu redor, certo?"
-    </font></font></i></div></div>
-</section>
-</head>
-<body>
+  <h1>Jade Estelar</h1>
+  
+  <div class="item">
+    <img src="/Site_Honkai/Art_splash/Item_Stellar_Jade.webp" alt="Imagem do item">
+    <h2>Descrição do item:</h2>
+    <p>"Alguns dizem que as luzes são desejos de seres sencientes. Embora insignificantes e indescritíveis, elas iluminaram o céu ao seu redor, certo?"</p>
+    <p>Stellar Jade é a moeda premium usada em Honkai: Star Rail . Ele pode ser usado para comprar Star Rail Pass e Star Rail Special Pass na Loja ou no Menu Warp por 160 Stellar Jade cada.</p>
+    <h3>Raridade:  <img id="path-image" alt="jade_estelar" src="/Site_Honkai/Art_Icon/Icon_5_Stars.webp" class="lazyloaded"></h3>
+    <h2>Descrição</h2>
+    <p>Um brilho fugaz atravessando o céu noturno. Pegue antes que acabe. Talvez possa ser usado para troca?</p>
+    <h2>Como obter:</h2>
+    <h2>Fonte 1:<p>Redimido com Fragmentos Oníricos</p></h2>
+    <h2>Fonte 2:<p>Recompensas da missão</p></h2>
+    <h2>Fonte 3:<p>Recompensas de nível</p></h2>
+    <h2>Fonte 4:<p>Salão Esquecido</p></h2>
+    <h2>Fonte 5:<p>Belobog: Underground - Fragmentum Abyss</p></h2>
+    <h2>Fonte 6:<p>Abrindo Baús</p></h2>
+    <h2>Fonte 7:<p>Eventos</p></h2>
+    <h2>Fonte 8:<p>Check-in diário do HoYoLAB</p></h2>
+    <h2>Fonte 9:<p>Atividade diária de treinamento</p></h2> 
+  </div>
+  <div class="description">
+    <i><a href="/Site_Honkai/site.html">Voltar</a></i>
+  </div>
 </body>
 </html>
