--- a/Site_Honkai/personagens/blade.html
+++ b/Site_Honkai/personagens/blade.html
@@ -48,7 +48,7 @@
         <td>???</td>
         </tr>
         <th>Como obter</th>
-        <td>Ainda não pode ser obtido</td>
+        <td>Ainda não pode ser obtido(a)</td>
         </tr>
         </tr>
         <th>Data de Lançamento</th>
