--- a/Site_Honkai/personagens/fuxuan.html
+++ b/Site_Honkai/personagens/fuxuan.html
@@ -50,7 +50,7 @@
         <td>O Xianzhou Luofu</td>
         </tr>
         <th>Como obter</th>
-        <td>Ainda não se pode obtido</td>
+        <td>Ainda não se pode obtido(a)</td>
         </tr>
         </tr>
         <th>Data de Lançamento</th>
