--- a/Site_Honkai/site.html
+++ b/Site_Honkai/site.html
@@ -540,33 +540,48 @@
             </font></font></th>
             <th><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Notas
             </font></font></th></tr>
-            <tr>
-            <td><a href="https://static.wikia.nocookie.net/houkai-star-rail/images/f/fb/NPC_Pom-Pom_Portrait.png/revision/latest?cb=20211008120222" class="image"><img alt="NPC Pom-Pom Retrato" src="/Site_Honkai/Art_splash/NPC_Pom-Pom_Portrait.webp" decoding="async" loading="lazy" width="50" height="50" data-image-name="NPC Pom-Pom Portrait.png" data-image-key="NPC_Pom-Pom_Portrait.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/f/fb/NPC_Pom-Pom_Portrait.png/revision/latest/scale-to-width-down/50?cb=20211008120222" class=" lazyloaded"></a>
-            </td>
-            <td><a href="/Site_Honkai/personagens/Pom_Pom.html" title="Pom-Pom"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom</font></font></a>
-            </td>
-            <td><a href="/Site_Honkai/locais/expresso_astral.html" title="Expresso Astral"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Expresso Astral</font></font></a>
-            </td>
-            <td><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Condutor do Expresso Astral
-            </font></font></td></tr>
-            <tr>
-            <td>
-            </td>
-            <td><a href="/wiki/Cocolia" title="cocolia"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Cocolia Rand</font></font></a>
-            </td>
-            <td><a href="/wiki/Belobog" title="Belobog"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Belobog</font></font></a>
-            </td>
-            <td><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Ex-guardiã suprema de Belobog, mãe adotiva de Bronya Rand
-            </font></font></td></tr>
-            <tr>
-            <td>
-            </td>
-            <td><a href="/wiki/Xueyi" title="Xueyi"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Xueyi</font></font></a>
-            </td>
-            <td><a href="/wiki/Xianzhou_Luofu" class="mw-redirect" title="Xianzhou Luofu"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Xianzhou Luofu</font></font></a>
-            </td>
-            <td><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Juiz da Comissão dos Dez Lordes
-            </font></font></td></tr>
+                    <tr>
+                        <td><img alt="NPC Pom-Pom Retrato" src="/Site_Honkai/Art_splash/NPC_Pom-Pom_Portrait.webp" decoding="async" loading="lazy" width="50" height="50" data-image-name="NPC Pom-Pom Portrait.png" data-image-key="NPC_Pom-Pom_Portrait.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/f/fb/NPC_Pom-Pom_Portrait.png/revision/latest/scale-to-width-down/50?cb=20211008120222" class=" lazyloaded"></a>
+                        </td>
+                        <td><a href="/Site_Honkai/personagens/Pom_Pom.html" title="Pom-Pom"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Pom-Pom</font></font></a>
+                        </td>
+                        <td><a href="/Site_Honkai/locais/expresso_astral.html" title="Expresso Astral"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Expresso Astral</font></font></a>
+                        </td>
+                        <td><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Condutor do Expresso Astral
+                        </font></font></td></tr>
+                        </td>
+                        <tr>
+                            <tr>
+                                <td><img alt="NPC Cocolia Rand Retrato" src="/Site_Honkai/Art_Icon/NPC_Cocolia_Icon.webp" decoding="async" loading="lazy" width="50" height="50" data-image-name="NPC Cocolia Portrait.png" data-image-key="NPC_cocolia_Portrait.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/f/fb/NPC_cocolia_Portrait.png/revision/latest/scale-to-width-down/50?cb=20211008120222" class=" lazyloaded"></a>
+                                </td>
+                                <td><a href="/Site_Honkai/personagens/cocolia.html" title="Cocolia Rand"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Cocolia Rand</font></font></a>
+                                </td>
+                                <td><a href="/Site_Honkai/locais/expresso_astral.html" title="Belobog"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Belobog</font></font></a>
+                                </td>
+                                <td><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">	Antagonista em In the Withering Winter Night e In the Sweltering Morning Sun,
+                                    Ex- guardiã suprema de Belobog e mãe adotiva de Bronya Rand
+                                </font></font></td></tr>
+                                </td>
+                            <tr>
+                                <td><img alt="NPC Dan Shu Retrato" src="/Site_Honkai/Art_Icon/NPC_Dan_Shu_Icon.webp" decoding="async" loading="lazy" width="50" height="50" data-image-name="NPC Dan Shu Portrait.png" data-image-key="NPC_Dan_shu_Portrait.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/f/fb/NPC_dan_shu_Portrait.png/revision/latest/scale-to-width-down/50?cb=20211008120222" class=" lazyloaded"></a>
+                                </td>
+                                <td><a href="/Site_Honkai/personagens/dan_shu.html" title="Dan Shu"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Dan Shu</font></font></a>
+                                </td>
+                                <td><a href="" title="Xianzhou Luofu"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">O Xianzhou Luofu</font></font></a>
+                                </td>
+                                <td><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Antagonista em Windswept Wanderlust e
+                                    Líder dos Discípulos de Sanctus Medicus
+                                </td>
+                                <tr>
+                                    <td><img alt="NPC Oleg Retrato" src="/Site_Honkai/Art_Icon/NPC_Oleg_Icon.webp" decoding="async" loading="lazy" width="50" height="50" data-image-name="NPC Oleg Portrait.png" data-image-key="NPC_oleg_Portrait.png" data-src="https://static.wikia.nocookie.net/houkai-star-rail/images/f/fb/NPC_dan_shu_Portrait.png/revision/latest/scale-to-width-down/50?cb=20211008120222" class=" lazyloaded"></a>
+                                    </td>
+                                    <td><a href="/Site_Honkai/personagens/oleg.html" title="Oleg"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Oleg</font></font></a>
+                                    </td>
+                                    <td><a href="" title="Belobog"><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Belobog</font></font></a>
+                                    </td>
+                                    <td><font style="vertical-align: inherit;"><font style="vertical-align: inherit;">Personagem coadjuvante em In the Withering Winter Night e In the Sweltering Morning Sun e
+                                        Captain of Wildfire
+                                    </td>
             </tbody></table>
     </section>
     <section id="contato">
@@ -605,7 +620,7 @@
     </section>
 </main>
 <footer>
-    <p>&copy; 2023. Todos os direitos reservados.</p>
+    <p> 2023. Todos os direitos reservados.</p>
 </footer>
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
